fix on session submission page ui on mobile devices

--- a/src/web/app/pages-session/session-submission-page/session-submission-page.component.scss
+++ b/src/web/app/pages-session/session-submission-page/session-submission-page.component.scss
@@ -4,3 +4,19 @@
   border: 0;
   box-shadow: 0 0 0 0;
 }
+.col-sm-3{
+    text-align: center;
+}
+.col-sm-6{
+    text-align: center;
+}
+$breakpoint-tablet: 577px;
+@media (min-width: $breakpoint-tablet){
+    .col-sm-3 {
+        text-align:right;
+    }
+    .col-sm-6{
+        text-align:left;
+    }
+}
+
